--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -24,3 +24,4 @@ jobs:
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
           GITLAB_PROJECT_ID: ${{ secrets.GITLAB_PROJECT_ID }}
           SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
+          GITLAB_QA_REVIEWER_USERNAME: ${{ secrets.GITLAB_QA_REVIEWER_USERNAME }}
