--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,7 +2,7 @@ name: GitLab Merge Request Reminder
 
 on:
   schedule:
-    - cron: '0 13 * * *'  # 10h BRT
+    - cron: '0 13 1-5 * *'  # 10h BRT, apenas dias úteis
   workflow_dispatch:      # permite rodar manualmente
 
 jobs:
