olhando para as tasks criadas pelo qa

--- a/env.example
+++ b/env.example
@@ -8,3 +8,7 @@ GITLAB_TOKEN=your-gitlab-personal-access-token
 # Author Tracking - Comma-separated list of GitLab usernames
 GITLAB_AUTHOR_USERNAMES=user1,user2,user3
 
+# QA Team - Comma-separated list of QA team member usernames
+# Used to identify child items created by QA for "Changes Requested" detection
+GITLAB_QA_USERNAMES=qa_user1,qa_user2,qa_user3
+
