--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 SLACK_TOKEN=
 SLACK_CHANNEL=
 GITLAB_TOKEN=
-GITLAB_PROJECT_ID=
-GITLAB_QA_REVIEWER_USERNAME=
+
+# Author Tracking - Comma-separated list of GitLab usernames
+GITLAB_AUTHOR_USERNAMES=
+
+# QA Team - Comma-separated list of QA team member usernames
+# Used to identify child items created by QA for "Changes Requested" detection
+GITLAB_QA_USERNAMES=
