--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -21,6 +21,7 @@ jobs:
       - run: npx ts-node src/index.ts
         env:
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-          GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
-          GITLAB_PROJECT_ID: ${{ secrets.GITLAB_PROJECT_ID }}
           SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
+          GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+          GITLAB_AUTHOR_USERNAMES: ${{ secrets.GITLAB_AUTHOR_USERNAMES }}
+          GITLAB_QA_USERNAMES: ${{ secrets.GITLAB_QA_USERNAMES }}
